Edited Hardware chapter

--- a/Arduino.tex
+++ b/Arduino.tex
@@ -1,7 +1,7 @@
 \chapter{Arduino}
 
 %BRIDGE FROM PREVIOUS SECTION
-The Arduino Uno in this project acts as a bridge between hardware and software, allowing the the laptop to read sensor data from the rover, and control the speed of its wheels.
+The rover's Arduino Uno acts as a bridge between hardware and software, allowing the the laptop to read sensor data from the rover, and control the speed of its wheels.
 
 \section{Background}
 Arduino development boards are printed circuit boards capable of running small embedded programs. They contain an on-board microcontroller, timing crystal, USB port, I/O pins and more. The specific board used in this project, an Arduino Uno, uses the ATmega328P microcontroller with a 16 MHz quartz timing crystal and 14 digital I/O pins. It also has 6 analog-to-digital converter I/O pins, but we won't make use of them in this project. 
